# tree-sitter-fsl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  grammar_old.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fsl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fsl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFsl/: fsl.h
bindings/swift/TreeSitterFslTests/: TreeSitterFslTests.swift
queries/: highlights.scm  old_highlights.scm  old_textobjects.scm
src/: grammar.json  node-types.json  parser.c
